feat:: add new product barcode ***newconcept
