# docs/swagger.yaml
@@ -2542,6 +2542,44 @@ definitions:
       success:
         type: boolean
     type: object
+  models.ProductBarcode:
+    properties:
+      barcode:
+        minLength: 1
+        type: string
+      categoryguid:
+        type: string
+      imageuri:
+        type: string
+      itemcode:
+        type: string
+      itemunitcode:
+        type: string
+      itemunitnames:
+        items:
+          $ref: '#/definitions/models.NameX'
+        minItems: 1
+        type: array
+        uniqueItems: true
+      names:
+        items:
+          $ref: '#/definitions/models.NameX'
+        minItems: 1
+        type: array
+        uniqueItems: true
+      options:
+        items:
+          $ref: '#/definitions/models.ProductOption'
+        type: array
+      prices:
+        items:
+          type: number
+        type: array
+    required:
+    - barcode
+    - itemunitnames
+    - names
+    type: object
   models.ProductCategory:
     properties:
       childcount:
@@ -2558,6 +2596,52 @@ definitions:
         type: string
       parentguidall:
         type: string
+      xorder:
+        maximum: 125
+        minimum: -125
+        type: integer
+    required:
+    - names
+    type: object
+  models.ProductChoice:
+    properties:
+      names:
+        items:
+          $ref: '#/definitions/models.NameX'
+        minItems: 1
+        type: array
+        uniqueItems: true
+      price:
+        type: number
+      qty:
+        type: number
+      qtymax:
+        type: number
+      refbarcode:
+        type: string
+      refunitcode:
+        type: string
+    required:
+    - names
+    type: object
+  models.ProductOption:
+    properties:
+      choices:
+        items:
+          $ref: '#/definitions/models.ProductChoice'
+        type: array
+      isrequired:
+        type: boolean
+      maxselect:
+        maximum: 60000
+        minimum: 0
+        type: integer
+      names:
+        items:
+          $ref: '#/definitions/models.NameX'
+        minItems: 1
+        type: array
+        uniqueItems: true
     required:
     - names
     type: object
@@ -7269,6 +7353,203 @@ paths:
       summary: นำเข้าข้อมูล payment master
       tags:
       - PaymentMaster
+  /product/barcode:
+    get:
+      consumes:
+      - application/json
+      description: get struct array by ID
+      parameters:
+      - description: Search Value
+        in: query
+        name: q
+        type: string
+      - description: Add Category
+        in: query
+        name: page
+        type: integer
+      - description: Add Category
+        in: query
+        name: limit
+        type: integer
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.ApiResponse'
+            type: array
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/models.AuthResponseFailed'
+      security:
+      - AccessToken: []
+      tags:
+      - ProductBarcode
+    post:
+      consumes:
+      - application/json
+      description: Create ProductBarcode
+      parameters:
+      - description: ProductBarcode
+        in: body
+        name: ProductBarcode
+        required: true
+        schema:
+          $ref: '#/definitions/models.ProductBarcode'
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/models.ResponseSuccessWithID'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/models.AuthResponseFailed'
+      security:
+      - AccessToken: []
+      tags:
+      - ProductBarcode
+  /product/barcode/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete ProductBarcode
+      parameters:
+      - description: ProductBarcode ID
+        in: path
+        name: id
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.ResponseSuccessWithID'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/models.AuthResponseFailed'
+      security:
+      - AccessToken: []
+      tags:
+      - ProductBarcode
+    get:
+      consumes:
+      - application/json
+      description: get struct array by ID
+      parameters:
+      - description: ProductBarcode ID
+        in: path
+        name: id
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.ApiResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/models.AuthResponseFailed'
+      security:
+      - AccessToken: []
+      tags:
+      - ProductBarcode
+    put:
+      consumes:
+      - application/json
+      description: Update ProductBarcode
+      parameters:
+      - description: ProductBarcode ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: ProductBarcode
+        in: body
+        name: ProductBarcode
+        required: true
+        schema:
+          $ref: '#/definitions/models.ProductBarcode'
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/models.ResponseSuccessWithID'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/models.AuthResponseFailed'
+      security:
+      - AccessToken: []
+      tags:
+      - ProductBarcode
+  /product/barcode/bulk:
+    post:
+      consumes:
+      - application/json
+      description: Create ProductBarcode
+      parameters:
+      - description: ProductBarcode
+        in: body
+        name: ProductBarcode
+        required: true
+        schema:
+          items:
+            $ref: '#/definitions/models.ProductBarcode'
+          type: array
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/models.BulkReponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/models.AuthResponseFailed'
+      security:
+      - AccessToken: []
+      tags:
+      - ProductBarcode
+  /product/barcode/list:
+    get:
+      consumes:
+      - application/json
+      description: search limit offset
+      parameters:
+      - description: Search Value
+        in: query
+        name: q
+        type: string
+      - description: offset
+        in: query
+        name: offset
+        type: integer
+      - description: limit
+        in: query
+        name: limit
+        type: integer
+      - description: lang
+        in: query
+        name: lang
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.ApiResponse'
+            type: array
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/models.AuthResponseFailed'
+      security:
+      - AccessToken: []
+      tags:
+      - ProductBarcode
   /product/category:
     get:
       consumes:
