# pkg/product/productbarcode/models/product_barcode.go
@@ -1,0 +1,73 @@
+package models
+
+import (
+	"smlcloudplatform/pkg/models"
+
+	"go.mongodb.org/mongo-driver/bson/primitive"
+)
+
+const posProductBarcodeCollectionName = "posProductBarcode"
+
+type ProductBarcode struct {
+	models.PartitionIdentity `bson:"inline"`
+	ItemCode                 string          `json:"itemcode" bson:"itemcode"`
+	Barcode                  string          `json:"barcode" bson:"barcode" validate:"required,min=1"`
+	CategoryGUID             string          `json:"categoryguid" bson:"categoryguid"`
+	Names                    *[]models.NameX `json:"names" bson:"names" validate:"required,min=1,unique=Code,dive"`
+
+	ItemUnitCode  string           `json:"itemunitcode" bson:"itemunitcode"`
+	ItemUnitNames *[]models.NameX  `json:"itemunitnames" bson:"itemunitnames" validate:"required,min=1,unique=Code,dive"`
+	Prices        *[]float64       `json:"prices" bson:"prices"`
+	ImageURI      string           `json:"imageuri" bson:"imageuri"`
+	Options       *[]ProductOption `json:"options" bson:"options"`
+}
+
+type ProductBarcodeInfo struct {
+	models.DocIdentity `bson:"inline"`
+	ProductBarcode     `bson:"inline"`
+}
+
+func (ProductBarcodeInfo) CollectionName() string {
+	return posProductBarcodeCollectionName
+}
+
+type ProductBarcodeData struct {
+	models.ShopIdentity `bson:"inline"`
+	ProductBarcodeInfo  `bson:"inline"`
+}
+
+type ProductBarcodeDoc struct {
+	ID                 primitive.ObjectID `json:"id" bson:"_id,omitempty"`
+	ProductBarcodeData `bson:"inline"`
+	models.ActivityDoc `bson:"inline"`
+}
+
+func (ProductBarcodeDoc) CollectionName() string {
+	return posProductBarcodeCollectionName
+}
+
+type ProductBarcodeItemGuid struct {
+	Barcode string `json:"barcode" bson:"barcode"`
+}
+
+func (ProductBarcodeItemGuid) CollectionName() string {
+	return posProductBarcodeCollectionName
+}
+
+type ProductBarcodeActivity struct {
+	ProductBarcodeData  `bson:"inline"`
+	models.ActivityTime `bson:"inline"`
+}
+
+func (ProductBarcodeActivity) CollectionName() string {
+	return posProductBarcodeCollectionName
+}
+
+type ProductBarcodeDeleteActivity struct {
+	models.Identity     `bson:"inline"`
+	models.ActivityTime `bson:"inline"`
+}
+
+func (ProductBarcodeDeleteActivity) CollectionName() string {
+	return posProductBarcodeCollectionName
+}
